only accept .png images

--- a/templates/index.html
+++ b/templates/index.html
@@ -59,7 +59,7 @@
         <div class="col-md-4">
           <img src="" id="selected-image" height="200" alt="Image preview..." />
           <br><br>
-          <input id="image-selector" type="file">
+          <input id="image-selector" type="file" accept="image/png" >
           <br>
           <br>
           <button id="predict-button">Predict</button>
