--- a/templates/index.html
+++ b/templates/index.html
@@ -7,11 +7,12 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blindness Detection App</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
   <!-- Main HTML Style CSS-->
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
-<body>
+<body onload="load()">
   <!-- navbar -->
   <nav id="navbar">
     <div class="navbar-header">
@@ -57,46 +58,44 @@
         <div class="col-md-4"></div>
 
         <div class="col-md-4">
-          <img src="" id="selected-image" height="200" alt="Image preview..." />
+          <img class="center-block" src="" id="selected-image" height="200" alt="Image preview..." />
           <br><br>
           <input id="image-selector" type="file" accept="image/png" >
           <br>
           <br>
           <button id="predict-button">Predict</button>
-          <br>
-          <br>
-          <p style="font-weight:bold">Predictions</p>
-          <p>No DR: <span id="no-prediction"></span></p>
-          <p>Mild: <span id="mild-prediction"></span></p>
-          <p>Moderate: <span id="mod-prediction"></span></p>
-          <p>Severe: <span id="sev-prediction"></span></p>
-          <p>Proliferative DR: <span id="pro-prediction"></span></p>
-
+          <br><br>
         </div>
 
         <div class="col-md-4"></div>
 
       </div>
+      <div class="row">
+        <br><br>
+          <div class="col-md-1"></div>
+          <div class="col-md-3">
+            <div id="custom-table">
+              <p class="table-header">Predictions</p>
+              <p>No DR: <span id="no-prediction"></span></p>
+              <p>Mild: <span id="mild-prediction"></span></p>
+              <p>Moderate: <span id="mod-prediction"></span></p>
+              <p>Severe: <span id="sev-prediction"></span></p>
+              <p>Proliferative DR: <span id="pro-prediction"></span></p>
+            </div>
+          </div>
+          <div class="col-md-7">
+              <div id="row-chart"></div>
+          </div>
+          <div class="col-md-1"></div>
+      </div>
     </div>
   </section>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-  <!-- Required dependencies -->
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-
+  <script src="https://d3js.org/d3.v5.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/crossfilter/1.3.12/crossfilter.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/dc/3.0.3/dc.min.js"></script>
   <script src="{{ url_for('static', filename='js/app.js') }}"></script>
-
-  <!-- Bootstrap JavaScript Libraries -->
-  <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
-  <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" -->
-  <!-- integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" -->
-  <!-- crossorigin="anonymous"></script> -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-    integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-    crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
@@ -118,6 +117,9 @@
       $("#mod-prediction").text("");
       $("#sev-prediction").text("");
       $("#pro-prediction").text("");
+      $("#row-chart").empty();
+      document.getElementById("custom-table").style.display = "none";
+      // $("#pie-chart").empty();
     });
 
     $('#predict-button').click(function (event) {
@@ -126,14 +128,30 @@
       }
       console.log(message);
       $.post("/predict", JSON.stringify(message), function (response) {
+        let predictions_array = Object.entries(response.prediction).map(function (entry) {
+          return {
+            category: entry[0],
+            value: entry[1]
+          };
+        });
+        let cf = crossfilter(predictions_array);
+        let category = cf.dimension(p=>p.category);
+        dc.rowChart('#row-chart').dimension(category).group(category.group().reduceSum(p=>p.value))
+        // dc.pieChart('#pie-chart').dimension(category).group(category.group().reduceSum(p=>p.value))
+        dc.renderAll();
         $("#no-prediction").text(response.prediction.NoDR.toFixed(6));
         $("#mild-prediction").text(response.prediction.Mild.toFixed(6));
         $("#mod-prediction").text(response.prediction.Moderate.toFixed(6));
         $("#sev-prediction").text(response.prediction.Severe.toFixed(6));
         $("#pro-prediction").text(response.prediction.ProliferativeDR.toFixed(6));
+        document.getElementById("custom-table").style.display = "block";
         console.log(response);
       });
     });
+
+    function load(){
+      document.getElementById('custom-table').style.display="none";
+    }
   </script>
 </body>
 
