new csv files; index.html remove png accept only

--- a/templates/index.html
+++ b/templates/index.html
@@ -61,7 +61,7 @@
           <img class="center-block" src="" id="selected-image" height="200" alt="" />
           <br><br>
           <label class="custom-file-upload">
-              <input id="image-selector" type="file" accept="image/png" style="display:none;" >
+              <input id="image-selector" type="file" style="display:none;" >
               Choose Image File ...
           </label>
           <br>
