html accepts all image files: png, jpeg, jpg, gif

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,7 +42,8 @@
 
 .table-header {
     font-weight:bold; 
-    text-align:center
+    text-align:center;
+    text-decoration: underline;
 }
 
 input[type="file"] {
