moved js to app.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -105,7 +105,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-  <script>
+  <!-- <script>
     let base64Image
     $('#image-selector').change(function () {
       let reader = new FileReader();
@@ -173,7 +173,7 @@
     function load(){
       $("#custom-table").css("display", "none");
     }
-  </script>
+  </script> -->
 </body>
 
 </html>
