--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,7 @@
               <input id="image-selector" type="file" style="display:none;" >
               Choose Image File ...
           </label>
+          <p><span id="image-filename"></span></p>
           <br>
           <br>
           <button id="predict-button">Predict</button>
@@ -93,6 +94,28 @@
           </div>
           <div class="col-md-1"></div>
       </div>
+      <br><br>
+      <div id="stages-table">
+      <table class="table table-sm table-bordered">
+        <thead>
+          <tr>
+            <th scope="col">Mild</th>
+            <th scope="col">Moderate</th>
+            <th scope="col">Severe</th>
+            <th scope="col">Proliferative</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td id="mild-desc">This is the earliest stage of diabetic retinopathy, and it’s characterized by balloon-like swelling in the retina’s blood vessels. These are called microaneurysms, and these vessels can leak into the eye.</td>
+            <td id="mod-desc">During this stage, the blood vessels nourishing the retina swell and may even become blocked. This can contribute to diabetic macular edema (DME) which is a build-up of fluid in the macula region of the retina.</td>
+            <td id="sev-desc">At this stage, an increasing number of blood vessels nourishing the eye have become blocked. As a result, the retina is signaled to grow new blood vessels.</td>
+            <td id="pro-desc">This is the final stage of diabetic retinopathy. New blood vessels proliferate, growing inside the retina and into the vitreous gel, which is the fluid that fills the eye. Because these blood vessels are delicate, they may begin to leak and bleed. As a result, scar tissue may form, causing retinal detachment, the pulling away of the retina from underlying tissue. Retinal detachment may cause spotty vision, flashes of lights, or severe vision loss.</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
     </div>
   </section>
 
@@ -105,75 +128,6 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-  <!-- <script>
-    let base64Image
-    $('#image-selector').change(function () {
-      let reader = new FileReader();
-      reader.onload = function (e) {
-        let dataURL = reader.result;
-        $('#selected-image').attr('src', dataURL);
-        // send image in base64 format
-        base64Image = dataURL.replace(/^data:image\/(png|jpg|jpeg|gif);base64,/, "");
-      }
-      reader.readAsDataURL($("#image-selector")[0].files[0]);
-      $("#no-prediction").text("");
-      $("#mild-prediction").text("");
-      $("#mod-prediction").text("");
-      $("#sev-prediction").text("");
-      $("#pro-prediction").text("");
-      $("#row-chart").empty();
-      $("#custom-table").css("display", "none");
-    });
-
-    $('#predict-button').click(function (event) {
-      let message = {
-        image: base64Image
-      }
-      console.log(message);
-      $.post("/predict", JSON.stringify(message), function (response) {
-        let predictions_array = Object.entries(response.prediction).map(function (entry) {
-          return {
-            category: entry[0],
-            value: entry[1]
-          };
-        });
-        let cf = crossfilter(predictions_array);
-        let category = cf.dimension(p=>p.category);
-        myRowChart = dc.rowChart('#row-chart').dimension(category).group(category.group().reduceSum(p=>p.value));
-        myRowChart.ordering(function(d) {
-            if(d.key == "NoDR") return 0;
-            else if(d.key == "Mild") return 1;
-            else if(d.key == "Moderate") return 2;
-            else if(d.key == "Severe") return 3;
-            else if(d.key == "ProliferativeDR") return 4;
-        });
-        dc.renderAll();
-        $("#no-prediction").text((response.prediction.NoDR * 100).toFixed(2) + '%');
-        $("#mild-prediction").text((response.prediction.Mild * 100).toFixed(2) + '%');
-        $("#mod-prediction").text((response.prediction.Moderate * 100).toFixed(2) + '%');
-        $("#sev-prediction").text(response.prediction.Severe.toFixed(2) + '%');
-        $("#pro-prediction").text(response.prediction.ProliferativeDR.toFixed(2) + '%');
-        $("#custom-table").css("display", "block");
-        console.log(response);
-      });
-    });
-
-    $('#clear-button').click(function (event) {
-      $("#no-prediction").text("");
-      $("#mild-prediction").text("");
-      $("#mod-prediction").text("");
-      $("#sev-prediction").text("");
-      $("#pro-prediction").text("");
-      $("#row-chart").empty();
-      $("#custom-table").css("display","none")
-      $('#selected-image').attr('src', '');
-      base64Image = null;
-    });
-
-    function load(){
-      $("#custom-table").css("display", "none");
-    }
-  </script> -->
 </body>
 
 </html>
