--- a/templates/image.html
+++ b/templates/image.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
-<body onload="load()">
+<body>
   <!-- navbar -->
   <nav id="navbar">
     <div class="navbar-header">
@@ -49,10 +49,31 @@
           <h3 style="color: Black" class="section-heading text-uppercase">Image Processing</h3>
           <h3 class="section-subheading text-muted">How do we know that a patient has Retinopathy?</h3>
           <br>
-          <img src="images/retinopathy.jpeg" alt="">
+          <img src="../static/images/retinopathy.jpeg" alt="">
+          <p><sup id="cite_ref-2" class="reference"><a href="https://www.eyeops.com/contents/our-services/eye-diseases/diabetic-retinopathy">[1]</a></sup></p>
         </div>
         <div class="col-lg-12 text-left">
-          <p>We are trying to detect these 5 attributes in our images. Hemorrphages, Hard Exudates and Cotton Wool spots seem more easily observed. Aneurysm or Abnormal Growth of Blood Vessels have not been provedn to be detected yet any known data set.</p>
+              <p><b>Microaneurysms</b> are the earliest clinically visible changes of diabetic retinopathy. They are localised 
+                  capillary dilatations which are usually saccular (round). They appear as small red dots which are often in clusters,
+                  but may occur in isolation</p>
+              <p><b>Hemorrhages</b> may be ‘dot’ or’ blot’ shaped (termed ‘dot/blot hemorrhages’) or 
+                  flame shaped depending upon their depth within the retina. The capillary network in the posterior 
+                  retina is found in two layers; a superficial one in the nerve fiber layer and a deeper on within the inner nuclear layer.</p>
+              <p><b>Hard exudates</b> are distinct yellow-white intra-retinal deposits which can vary from small specks to larger patches. 
+                  Hard exudates are largely made up of extracellular lipid which has leaked from abnormal retinal capillaries, 
+                  hence there is often associated retinal edema (which is not visible using direct ophthalmoscopy). The underlying 
+                  problem is often apparent as the exudates will form a ring or ‘circinate’ pattern around the leaking vessels 
+                  (which may be seen as a cluster of microaneurysms). Hard exudates are found principally in the macular region 
+                  and as the lipids coalesce and extend into the central macula, vision can be severely compromised.</p>
+               <p><b>Cotton-wool spots</b> are greyish-white patches of discoloration in the nerve fiber layer which have indistinct 
+                   (fluffy) edges. They are the result of local ischaemia which leads to disruption of axoplasmic flow. Cotton-wool 
+                   spots are common and one or two do not require intervention. However, multiple cotton wool spots (more than 6 in one eye) 
+                   indicate generalised retinal ischaemia and this is regarded as a pre-proliferative state.</p>
+                <p><b>Venous dilatation</b>, beading and duplication occur as retinal ischaemia progresses. Beading is a useful sign of diffuse retinal ischaemia.
+                   Venous dilatation is seen early in diabetic retinopathy but is a rather subjective diagnosis.</p>
+                <p>Typically, preproliferative retinopathy will consist of multiple cotton wool spots, multiple dot and blot haemorrhages, venous changes and intra-retinal microvascular abnormalities.
+                    <sup id="cite_ref-2" class="reference"><a href="http://www.glycosmedia.com/education/diabetic-retinopathy/diabetic-retinopathy-features-of-diabetes-microaneurysms/">[2]</a></sup>
+                </p>
           <br>
         </div>
         <div class="col-lg-12 text-center">
@@ -60,21 +81,22 @@
           <br>
         </div>
         <div class="col-lg-12 text-left">
-          <p>We do image processing to manipulate the pictures for extracting some useful information from them.  We can reduce noises, control the brightness and color contrast. OpenCV stands for Open Source Computer Vision library and it’s invented by Intel in 1999.</p>
+          <p>We do image processing to manipulate the pictures for extracting some useful information from them.  
+             We can reduce noises, control the brightness and color contrast. OpenCV (Open Source Computer Vision Library) 
+             is an open source computer vision and machine learning software library. OpenCV was built to provide a common 
+             infrastructure for computer vision applications and to accelerate the use of machine perception in the commercial 
+             products.<sup id="cite_ref-2" class="reference"><a href="https://opencv.org/about">[3]</a></sup></p>
+             
         </div>
           <div class="col-lg-12 text-center">
                 <h3 class="section-subheading text-muted">Color</h3>
                 <br>
          </div>
          <div class="col-lg-12 text-left">
-          <p>The default setting of the color mode in OpenCV comes in the order of BGR, which is different from that of Matplotlib. Therefore to see the image in RGB mode, we need to convert it from BGR to RGB as follows.</p>
-          <p># Convert the image into RGB
-            img_rgb = cv2.cvtColor(img, cv2.COLOR_BGR2RGB)
-            plt.imshow(img_rgb)</p>
             <p>Images come with many different lighting conditions, some images are very dark and difficult to visualize. We decided to convert the image to gray scale, and visualize better. A grayscale is simple. It represents images and morphologies by the intensity of black and white, which means it has only one channel. To see images in grayscale, we need to convert the color mode into gray.</p>
           </div>
           <div class="col-lg-12 text-center">
-            <p>img_gray = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)</p>
+          
          <br>
          </div>
          <div class="col-lg-12 text-center">
@@ -90,15 +112,22 @@
                 <br>
          </div>
          <div class="col-lg-12 text-left">
-         <p>When it comes to detecting edges and contours, noise gives a great impact on the accuracy of detection. Therefore removing noises and controlling the intensity of the pixel values can help the model to focus on the general details and get higher accuracy. Blurring, thresholding, and morphological transformation are the techniques we use for this purpose.</p>
-         <p>The goal of blurring is to perform noise reduction.</p>
-         <p>we need to find an adequate amount of blurring we’re going to apply without losing desirable edges.</p>
+         <p>When it comes to detecting edges and contours, noise gives a great impact on the accuracy of detection. 
+            Therefore removing noises and controlling the intensity of the pixel values can help the model to focus 
+            on the general details and get higher accuracy. Blurring is one technique we use for this purpose. Ideally, 
+            we need to find an adequate amount of blurring without losing desirable edges. Gaussian filtering 
+            is highly effective in removing Gaussian noise from the image.
+         </p>
          </div>
          <div class="col-lg-12 text-center">
-         <img src="images/gaussian.png" alt="">
+         <img src="../static/images/gaussian.png" alt="">
         </div>
         <div class="col-lg-12 text-left">
-         <p>Gaussian blurring is nothing but using the kernel whose values have a Gaussian distribution. The values are generated by a Gaussian function so it requires a sigma value for its parameter. As you can see the image above, the values of the kernel go higher near the center and go smaller near the corner. It’s good to apply this method to the noises that have a normal distribution such as white noise.</p>
+         <p>Gaussian blurring is nothing but using the kernel whose values have a Gaussian distribution. The values are 
+            generated by a Gaussian function so it requires a sigma value for its parameter. As you can see the image above, 
+            the values of the kernel go higher near the center and go smaller near the corner. It’s good to apply this method 
+            to the noises that have a normal distribution such as white noise. In terms of image processing, 
+            any sharp edges in images are smoothed while minimizing too much blurring.</p>
  
         </div>
       </div>
