--- a/templates/image.html
+++ b/templates/image.html
@@ -6,44 +6,69 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Blindness Detection App</title>
+    <link rel="shortcut icon" href="../static/images/DR_Logo.png" />
     <!-- Style Sheets-->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </head>
 
 <body>
-    <!-- navbar -->
-    <nav id="navbar">
-        <div class="navbar-header">
-            <a class="navbar-brand team-name" href="" style="padding-left:25px">Blindness Detection App</a>
-        </div>
-        <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
+    <!------------ navbar ---------->
+    <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row bd-navbar">
+        <a class="navbar-brand" href="/">
+            <img src="../static/images/DR_Logo.png" alt="logo" style="width:60px; height:60px">
+        </a>
+        <div class="navbar-nav-scroll">
+            <ul class="navbar-nav bd-navbar-nav flex-row">
                 <li class="nav-item">
-                    <a class="nav-link" target="#" href="">About</a>
+                    <a class="nav-link active" href="/"
+                        onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Blindness Detection
+                        App</a>
                 </li>
-                <li class="menu">
-                    <a target="#_blank" href="https://github.com/velmavasquez/Blindness-Detection-App"
-                        style="padding-right:20px">
-                        <img width=40px height=40px src="../static/images/Github-Logo-lg.svg">
-                    </a>
+                <li class="nav-item">
+                    <a class="nav-link " href="/Prevalence_Facts"
+                        onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Prevalence Facts</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="/Image_Processing"
+                        onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Image
+                        Processing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link " href="/Model"
+                        onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Model</a>
                 </li>
             </ul>
         </div>
-    </nav>
+
+        <ul class="nav navbar-nav navbar-right flex-row ml-md-auto d-none d-md-flex">
+            <li class="menu">
+                <a target="#_blank" href="https://github.com/velmavasquez/Blindness-Detection-App"
+                    style="padding-right:20px">
+                    <img width=60px height=60px src="../static/images/Github-Logo-white.svg">
+                </a>
+            </li>
+        </ul>
+    </header>
+
     <!-- jumbotron & intro -->
-    <div class="row">
-        <div class="jumbotron jumbotron-fluid text-center">
-            <div class="overlay"></div>
-            <div class="inner">
-                <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
-                <h3 class="h3-white"> Detect blindness before it happens</h3>
-            </div>
+
+    <div class="jumbotron jumbotron-fluid text-center">
+        <div class="overlay"></div>
+        <div class="inner">
+            <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
+            <h3 class="h3-white"> Detect blindness before it happens</h3>
         </div>
     </div>
+
     <!-- Navigation -->
     <section id="services">
         <div class="container">
