--- a/templates/index.html
+++ b/templates/index.html
@@ -6,41 +6,64 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Blindness Detection App</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/dc/3.1.0/dc.css">
+  <link rel="shortcut icon" href="../static/images/DR_Logo.png" />
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
   <!-- Main HTML Style CSS-->
   <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
 <body onload="load()">
-  <!-- navbar -->
-  <nav id="navbar">
-    <div class="navbar-header">
-      <a class="navbar-brand team-name" href="" style="padding-left:25px">Blindness Detection App</a>
-    </div>
-    <div class="collapse navbar-collapse">
-      <ul class="nav navbar-nav navbar-right">
+  <!------------ navbar ---------->
+  <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row bd-navbar">
+    <a class="navbar-brand" href="/">
+      <img src="../static/images/DR_Logo.png" alt="logo" style="width:60px; height:60px">
+    </a>
+    <div class="navbar-nav-scroll">
+      <ul class="navbar-nav bd-navbar-nav flex-row">
         <li class="nav-item">
-          <a class="nav-link" target="#" href="">About</a>
+          <a class="nav-link active" href="/"
+            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Blindness Detection App</a>
         </li>
-        <li class="menu">
-          <a target="#_blank" href="https://github.com/velmavasquez/Blindness-Detection-App" style="padding-right:20px">
-            <img width=40px height=40px src="../static/images/Github-Logo-lg.svg">
-          </a>
+        <li class="nav-item">
+          <a class="nav-link " href="/Prevalence_Facts"
+            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Bootstrap');">Prevalence Facts</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="/Image_Processing"
+            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Docs');">Image
+            Processing</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link " href="/Model"
+            onclick="ga('send', 'event', 'Navbar', 'Community links', 'Examples');">Model</a>
         </li>
       </ul>
     </div>
-  </nav>
+
+    <ul class="nav navbar-nav navbar-right flex-row ml-md-auto d-none d-md-flex">
+      <li class="menu">
+        <a target="#_blank" href="https://github.com/velmavasquez/Blindness-Detection-App" style="padding-right:20px">
+          <img width=60px height=60px src="../static/images/Github-Logo-white.svg">
+        </a>
+      </li>
+    </ul>
+  </header>
+
   <!-- jumbotron & intro -->
-  <div class="row">
-    <div class="jumbotron text-center">
-      <div class="overlay"></div>
-      <div class="inner">
-        <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
-        <h3 class="h3-white"> Detect blindness before it happens</h3>
-      </div>
+
+  <div class="jumbotron text-center">
+    <div class="overlay"></div>
+    <div class="inner">
+      <h1><span>Classification of Diabetic Retinopathy Severity </span></h1>
+      <h3 class="h3-white"> Detect blindness before it happens</h3>
     </div>
   </div>
+
   <!-- Navigation -->
   <section id="services">
     <div class="container">
@@ -61,8 +84,8 @@
           <img class="center-block" src="" id="selected-image" height="200" alt="" />
           <br><br>
           <label class="custom-file-upload">
-              <input id="image-selector" type="file" style="display:none;" >
-              Choose Image File ...
+            <input id="image-selector" type="file" style="display:none;">
+            Choose Image File ...
           </label>
           <p><span id="image-filename"></span></p>
           <br>
@@ -77,44 +100,53 @@
       </div>
       <div class="row">
         <br><br>
-          <div class="col-md-1"></div>
-          <div class="col-md-3">
-            <div id="custom-table">
-              <p class="table-header">Predictions</p>
-              <p><b>No DR: </b><span id="no-prediction"></span></p>
-              <p><b>Mild: </b><span id="mild-prediction"></span></p>
-              <p><b>Moderate: </b><span id="mod-prediction"></span></p>
-              <p><b>Severe: </b><span id="sev-prediction"></span></p>
-              <p><b>Proliferative DR: </b><span id="pro-prediction"></span></p>
-            </div>
+        <div class="col-md-1"></div>
+        <div class="col-md-3">
+          <div id="custom-table">
+            <p class="table-header">Predictions</p>
+            <p><b>No DR: </b><span id="no-prediction"></span></p>
+            <p><b>Mild: </b><span id="mild-prediction"></span></p>
+            <p><b>Moderate: </b><span id="mod-prediction"></span></p>
+            <p><b>Severe: </b><span id="sev-prediction"></span></p>
+            <p><b>Proliferative DR: </b><span id="pro-prediction"></span></p>
           </div>
-          <div class="col-md-7">
-            <br>
-            <div id="row-chart"></div>
-          </div>
-          <div class="col-md-1"></div>
+        </div>
+        <div class="col-md-7">
+          <br>
+          <div id="row-chart"></div>
+        </div>
+        <div class="col-md-1"></div>
       </div>
       <br><br>
       <div id="stages-table">
-      <table class="table table-sm table-bordered">
-        <thead>
-          <tr>
-            <th scope="col">Mild</th>
-            <th scope="col">Moderate</th>
-            <th scope="col">Severe</th>
-            <th scope="col">Proliferative</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td id="mild-desc">This is the earliest stage of diabetic retinopathy, and it’s characterized by balloon-like swelling in the retina’s blood vessels. These are called microaneurysms, and these vessels can leak into the eye.</td>
-            <td id="mod-desc">During this stage, the blood vessels nourishing the retina swell and may even become blocked. This can contribute to diabetic macular edema (DME) which is a build-up of fluid in the macula region of the retina.</td>
-            <td id="sev-desc">At this stage, an increasing number of blood vessels nourishing the eye have become blocked. As a result, the retina is signaled to grow new blood vessels.</td>
-            <td id="pro-desc">This is the final stage of diabetic retinopathy. New blood vessels proliferate, growing inside the retina and into the vitreous gel, which is the fluid that fills the eye. Because these blood vessels are delicate, they may begin to leak and bleed. As a result, scar tissue may form, causing retinal detachment, the pulling away of the retina from underlying tissue. Retinal detachment may cause spotty vision, flashes of lights, or severe vision loss.</td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+        <table class="table table-sm table-bordered">
+          <thead>
+            <tr>
+              <th scope="col">Mild</th>
+              <th scope="col">Moderate</th>
+              <th scope="col">Severe</th>
+              <th scope="col">Proliferative</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td id="mild-desc">This is the earliest stage of diabetic retinopathy, and it’s characterized by
+                balloon-like swelling in the retina’s blood vessels. These are called microaneurysms, and these vessels
+                can leak into the eye.</td>
+              <td id="mod-desc">During this stage, the blood vessels nourishing the retina swell and may even become
+                blocked. This can contribute to diabetic macular edema (DME) which is a build-up of fluid in the macula
+                region of the retina.</td>
+              <td id="sev-desc">At this stage, an increasing number of blood vessels nourishing the eye have become
+                blocked. As a result, the retina is signaled to grow new blood vessels.</td>
+              <td id="pro-desc">This is the final stage of diabetic retinopathy. New blood vessels proliferate, growing
+                inside the retina and into the vitreous gel, which is the fluid that fills the eye. Because these blood
+                vessels are delicate, they may begin to leak and bleed. As a result, scar tissue may form, causing
+                retinal detachment, the pulling away of the retina from underlying tissue. Retinal detachment may cause
+                spotty vision, flashes of lights, or severe vision loss.</td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
 
     </div>
   </section>
