tableau html correction

--- a/templates/tableau.html
+++ b/templates/tableau.html
@@ -19,7 +19,7 @@
 
 </head>
 
-<body onload="initViz();">
+<body onload="initViz()">
   <!------------ navbar ---------->
   <header class="navbar navbar-expand-sm navbar-dark bg-dark flex-column flex-md-row bd-navbar">
     <a class="navbar-brand" href="/">
